# PCB-GL

./: 0001-FSAA-PATCH-FOUND-FROM-INTERWEBS.patch  INSTALL  Makefile.am  README  README-GTK_PORT  README.cvs  README.cvs_branches  README.snapshots  README.win32  acinclude.m4  aclocal.m4  autogen.sh  configure.ac  globalconst.h  meta  mkinstalldirs
README_FILES/: Makefile.am
doc/: Imakefile  Makefile.am  Xdefaults.tgif  actions.texi  ascii2texi.awk  database.txt  eps2png  extract-docs  fractional_size.tab  fractional_size.texi  keepouts.txt  letter_size.tab  letter_size.texi  mdate-sh  metric_size.tab  metric_size.texi  pcb.1  pcb.man.in  pcb.man.raw  pcb.texi  pcb.texi.in  pcb.texi.raw  pcbfile.texi  refcard.tex  version.texi  wire_size.tab  wire_size.texi  wishlist.txt
example/: Makefile.am
gts/: refine.c  split.c
lib/: CreateLibrary.sh.in  CreateLibrary.sh.raw  CreateLibraryContents.sh.in  CreateLibraryContents.sh.raw  Imakefile  ListLibraryContents.sh  ListLibraryContents.sh.in  Makefile.am  QueryLibrary.sh.in  QueryLibrary.sh.raw  TTL_74xx_DIL.list  TTL_74xx_DIL.m4  amp.inc  amphenol.inc  amphenol.list  amphenol.m4  bourns.inc  candk.inc  common.m4  connector.inc  connector.list  connector.m4  crystal.list  crystal.m4  cts.inc  dil.inc  geda.inc  gen_geda_list.awk  gen_geda_m4.awk  gen_list.awk  gen_m4.awk  generic.list  generic.m4  jerry.list  jerry.m4  johnstech.inc  linear.list  linear.m4  logic.list  logic.m4  (+38 more)
newlib/: Makefile.am
newlib/2_pin_thru-hole_packages/: Makefile.am
newlib/analog-devices/: Makefile.am
newlib/burr-brown/: Makefile.am
newlib/connectors/: Makefile.am
newlib/crystal/: Makefile.am
newlib/cypress/: Makefile.am
newlib/electro-optics/: Makefile.am
newlib/generic_SMD_packages/: Makefile.am
newlib/headers/: Makefile.am
newlib/keystone/: Makefile.am
newlib/msp430/: Makefile.am
newlib/not_vetted_ingo/: Makefile.am
newlib/sockets/: Makefile.am
newlib/tests/: Makefile.am
newlib/toko/: Makefile.am
patches/: 0001-A-possible-fix-for-the-LP1013358-bug.patch  0001-Add-measurement-units-to-route-styles-string.patch  0001-Additional-defines-for-a-3D-joystick-for-older-lin.patch  0001-Check-Net-name-appropriately.patch  0001-Clean-up-git-status-output.patch  0001-Fix-a-bug-in-gtk-hid-which-caused-layer-buttons-to-g.patch  0001-Fix-get_coords-function.patch  0001-Heed-and-remove-warning-issues-by-autoconf-2.68.patch  0001-INSTALL-add-instructions-on-how-to-create-configure.patch  0001-Prevent-extra-windows-from-showing-unnecessarily-in-.patch  0001-Updated-the-Dutch-translation.patch  0001-lines-with-different-clearances-are-not-merged.patch  0001-polygon.c-For-some-reason-the-range-computation-in-f.patch  0001-search.c-Don-t-allow-selecting-pads-or-pins-of-locke.patch  0001-search.c-Fix-crash-introduced-by-bad-logic-in-the-la.patch  0001-src-file.c-don-t-write-user-name-or-date-to-the-stor.patch  0001.patch  0002-Fix-poly-contours.patch  0002-Remove-all-date-user-and-host-comments-on-all-test-a.patch  0002-gtk-gl-Fix-up-ghid_set_color-function.patch  0002.patch  0003-GTK-GL-Play-with-layer-translucency.patch  0003-configure.ac-remove-the-now-obsolete-test-for-gethos.patch  0013-Modify-window-title-see-Gnome-HID-Guidelines.patch  0054-Docu-Rat-lines-are-drawn-different.patch  32bit-fix-gl-hid-zoom-out-due  32bit-fix-gl-hid-zoom-out-due-  3d-mouse-cursor-and-other-proj  FixSmash.patch  Initial_experiment  PATCH_1_7-_PCB_localization  PATCH_2_7-_PCB_localization  PATCH_3_7-_PCB_localization  PATCH_4_7-_PCB_localization  PATCH_5_7-_PCB_localization  PATCH_6_7-_PCB_localization  (+1740 more)
po/: POTFILES.in
src/script/: Makefile.am  pcb-print  pcb.in
tools/: Makefile.am  MergePCBPS  Merge_dimPCBPS  gnet-pcbfwd.scm
(+349 files in other folders)
