## $Id: Makefile.am,v 1.1 2003-02-20 00:23:35 danmc Exp $
##
## Top level 'newlib' automake file

SUBDIRS=\
	2_pin_thru-hole_packages \
	analog-devices \
	burr-brown \
	connectors \
	crystal \
	cypress \
	electro-optics \
	generic_SMD_packages \
	headers \
	msp430 \
	not_vetted_ingo \
	sockets \
	tests \
	toko 

