## $Id: Makefile.am,v 1.2 2004-02-09 04:07:56 danmc Exp $
##

## XXX the tools should probably be cleaned up a bit and installed
## in ${exec_prefix}/bin  (by bin_SCRIPTS and bin_PROGRAMS)

toolsdir=	$(pkgdatadir)/tools
tools_DATA=	${TOOLS}

EXTRA_DIST= ${TOOLS}

TOOLS= \
	apctools.zip \
	gerbertotk.c \
	pcb2ncap.tgz \
	tgo2pcb.tcl \
	MergePCBPS \
	Merge_dimPCBPS \
	PCB2HPGL 

